Closed Bug 1843399 Opened 2 years ago Closed 2 years ago

--wasm-gc doesn't work in jshell 2023-07-13-09-17-48

Categories

(Core :: JavaScript: WebAssembly, defect)

defect

Tracking

()

RESOLVED FIXED
117 Branch
Tracking Status
firefox117 --- fixed

People

(Reporter: bashorov, Assigned: rhunt)

References

Details

Attachments

(2 files)

I run jsshell with the next options:

js --wasm-verbose --wasm-gc --wasm-function-references --module=./test.mjs

And get the following exception:

CompileError: at offset 336: gc types not enabled
Summary: --wasm-gc doesn't work in jshell 2023-07-13-09-17-48-mozilla-central → --wasm-gc doesn't work in jshell 2023-07-13-09-17-48

The previous patch accidentally used 'stage' instead of 'STAGE' and
somehow it compiled successfully.

Assignee: nobody → rhunt
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Pushed by ydelendik@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/67481857cf54 wasm: Use macro STAGE variable correctly. r=yury https://hg.mozilla.org/integration/autoland/rev/42e0b293b3a6 Fix wasm test that was skipped by accident. r=yury
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 117 Branch
Regressions: 1844559
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: