Bug 1843399 - wasm: Use macro STAGE variable correctly. r=yury

The previous patch accidentally used 'stage' instead of 'STAGE' and
somehow it compiled successfully.

Differential Revision: https://phabricator.services.mozilla.com/D183596